<resources>
    <string name="app_name" translatable="false">OC maker: Cat Emoji Maker</string>

    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">Settings</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">Language</string>

    <string name="title_1">Create your own avatar however you like</string>
    <string name="title_2">Diverse Unique Categories</string>
    <string name="title_3">Great Variety Of Items</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no!</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no!</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no!</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too!</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too!</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit cat maker</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="wait_a_minute">Wait a minute</string>
    <string name="reset">Reset your design</string>    <string name="download_success">Download successful to the Cat Maker album</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error occurred, please try again later.</string>
    <string name="image_has_been_saved_successfully">You have successfully created a character</string>    <string name="save">Save</string>
    <string name="are_you_sure_want_to_delete_this_item">Do you want to delete?</string>
    <string name="downloading">Downloading...</string>
    <string name="successfully">Successfully</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="save_failed_please_try_again">Save failed, please try again!</string>
    <string name="delete_failed_please_try_again">Delete failed, please try again!</string>
    <string name="my_creation">My Creation</string>
    <string name="delete_your_customize">Delete your customize</string>
    <string name="are_you_sure_you_want_to_delete_the_image">Are you sure you want to delete the image?</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">The character you designed will not be \nsaved, but you can still exit.</string>
    <string name="change_your_whole_design_are_you_sure">The character will revert
\nto their initial state.</string>
    <string name="character_maker">Cat Emoji \nMaker</string>
    <string name="no_item_here">No Item Here</string>
    <string name="quick_maker">Quick \nMix</string>
    <string name="my_character">My Pixel</string>
    <string name="category">Pixel Maker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_item_space">No current history</string>
    <string name="add_to_whatsapp">Add to Whatsapp</string>
    <string name="add_to_telegram">Add To Telegram</string>
    <string name="my_avatar">My Avatar</string>
    <string name="my_design">My Design</string>
    <string name="my_album">My album</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="background">Background</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="add_image">Add Image</string>
    <string name="sticker">Sticker</string>
    <string name="speech_bubbles">Speech Bubbles</string>
    <string name="text">Text</string>
    <string name="type_your_content">Type your content...</string>
    <string name="font">Font</string>
    <string name="choose_color">Choose Color</string>
    <string name="done">Done</string>
    <string name="null_edt">Please enter text</string>
    <string name="my_pixel">My Pixel</string>
    <string name="input_text">Input text</string>
    <string name="hello_world">Hello World !!</string>
    <string name="no_item_desgin">No current history</string>
    <string name="my_character_in">My Work</string>
    <string name="quick_maker_in">Quick mix</string>
    <string name="exit_add">Exit your background</string>
    <string name="exit_bg">Exit your background</string>
    <string name="exit_cus">Exit cat maker</string>
    <string name="loading">Loading</string>
    <string name="internet_required_for_more_characters">Internet required for more characters</string>
    <string name="go_to_creation">Go to creation</string>
    <string name="edit">Edit</string>
    <string name="character">Character</string>
    <string name="design">Design</string>
    <string name="dont_have_item">You don’t have any character</string>
    <string name="creation">Creation</string>
    <string name="cancel">Cancel</string>
    <string name="reset_yes">Reset</string>
    <string name="exit_yes">Exit</string>
    <string name="go_to_setting">setting</string>
    <string name="exitRate">Exit</string>
</resources>