<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--    flOutSide-->
    <FrameLayout
        android:id="@+id/flOutSide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        layoutMain-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            android:background="@drawable/bg_dialog"
            app:cardElevation="0dp">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="0dp"
                        android:layout_marginHorizontal="70dp"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:fontFamily="@font/baloobhaijaan_regular"
                        android:gravity="center"
                        android:paddingVertical="5dp"
                        android:text="@string/delete"
                        style="@style/single_marquee"
                        android:textColor="#2893FF"
                        android:textSize="20sp"
                        app:layout_constraintVertical_bias="0.15"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />




                <!--            tvDescription-->
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:maxLines="2"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.35"
                    android:paddingHorizontal="24dp"
                    android:text="@string/are_you_sure_want_to_delete_this_item"
                    android:textColor="#595959"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="23dp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.95"
                    android:orientation="horizontal">

                    <!--                    btnNo-->
                    <TextView
                        android:id="@+id/btnYes"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_dialog_btn"
                        android:fontFamily="@font/baloobhaijaan_regular"
                        android:gravity="center"
                        android:text="@string/exit"
                        android:textColor="@color/color_app"
                        android:textSize="16sp" />

                    <!--                    btnYes-->
                    <TextView
                        android:id="@+id/btnNo"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_dialog_btn"
                        android:fontFamily="@font/baloobhaijaan_regular"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/color_app"
                        android:textSize="16sp" />
                </LinearLayout>

                <!--            ConstraintLayout bọc tvTitle (Bottom)-->


            </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>