<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permission.PermissionActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_app"
 />

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!-- imgPermission -->
    <ImageView
        android:id="@+id/imgPermission"
        android:layout_width="260dp"
        android:layout_height="252dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutActionBar" />

    <!-- txtPermission -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txtPermission"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="57dp"
        android:layout_marginTop="-65dp"
        android:gravity="center"
        android:background="@drawable/bg_frame_permission"
        android:orientation="vertical"
        android:fontFamily="@font/londrina_solid_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPermission">

        <TextView
            android:id="@+id/txtPer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloobhaijaan_regular"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:textSize="16sp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- scvButton -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/tvContinue"
        app:layout_constraintTop_toBottomOf="@id/txtPermission">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <!-- btnStorage-->
            <RelativeLayout
                android:id="@+id/btnStorage"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_item_per">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    android:gravity="start"
                    android:text="@string/storage"
                    android:textColor="#2893FF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/swPermission"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="15dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

            <!-- btnNotification-->
            <RelativeLayout
                android:id="@+id/btnNotification"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_item_per">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    android:gravity="start"
                    android:text="@string/notification"
                    android:textColor="#2893FF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/swNotification"
                    android:layout_width="40dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginVertical="15dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_sw_off" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <!-- tvContinue -->
    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/baloobhaijaan_regular"
        android:gravity="end"
        android:text="@string/continue_per"
        android:textColor="#095DB2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />


</androidx.constraintlayout.widget.ConstraintLayout>