<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ocmaker.pixcel.maker.ui.SettingsActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/bg_app"/>

    <!-- layoutActionBar -->
    <FrameLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--            btnLang-->
            <LinearLayout
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@drawable/bg_language_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_lang_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="@color/color_app"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/arrow"
                    android:layout_marginStart="15dp"
                    />



            </LinearLayout>

            <!--            btnLang-->
            <LinearLayout
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_rate_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    android:gravity="center_vertical"
                    android:text="@string/rate_us"
                    android:textColor="@color/color_app"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/arrow"
                    android:layout_marginStart="15dp"
                    />


            </LinearLayout>

            <!--            btnShare-->
            <LinearLayout
                android:id="@+id/btnShareApp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_share_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    android:gravity="center_vertical"
                    android:text="@string/share_app"
                    android:textColor="@color/color_app"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/arrow"
                    android:layout_marginStart="15dp"
                    />

            </LinearLayout>

            <!--            btnPolicy-->
            <LinearLayout
                android:id="@+id/btnPolicy"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_language_selected"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginVertical="17dp"
                        android:src="@drawable/ic_policy_set" />
                </FrameLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="8"
                    android:fontFamily="@font/baloobhaijaan_regular"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/color_app"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/arrow"
                    android:layout_marginStart="15dp"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <!--    &lt;!&ndash;    flBanner&ndash;&gt;-->
    <!--    <FrameLayout-->
    <!--        android:id="@+id/flBanner"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent">-->

    <!--        <include-->
    <!--            android:id="@+id/includeBanner"-->
    <!--            layout="@layout/layout_banner" />-->
    <!--    </FrameLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>